# chrome-extension-chatbot

./: .env.example  .gitignore  README.md  chatbot.db  main.py  pyproject.toml  railway.toml  requirements.txt
backend/: chain.py  chat_store.py  config.py  models.py  server.py  session_manager.py
backend/templates/: chat.html
docs/: privacy.html
extension/: background.js  content.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
tests/: test_chain.py  test_chat_store.py  test_config.py  test_server.py  test_session_manager.py
