[project]
name = "chrome-ext-chatbot"
version = "0.2.0"
description = "Chrome extension chatbot that lets you chat about any webpage content using LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2,<3",
    "langchain>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-ollama>=0.3,<1",
    "langchain-community>=0.3,<1",
    "langchain-text-splitters>=0.3,<1",
    "faiss-cpu>=1.9,<2",
    "python-dotenv>=1,<2",
    "slowapi>=0.1,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
